project/logs/20250801_215326.log
Window Initialized.

XAudio Initialized.

DirectInput Initialized.

Use Adapter : NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device.

Begin Compile, path:Object3D.VS.hlsl, profile:vs_6_0

Compile Succeeded, path:Object3D.VS.hlsl, profile:vs_6_0

Begin Compile, path:Object3D.PS.hlsl, profile:ps_6_0

Object3D.PS.hlsl:41:44: error: read-only variable is not assignable
        if (gDirectionalLight.lightingType = 0)
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^

